# wordle-data

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
proto/: enum_check_the_row_result.proto  enum_row_result.proto  enum_the_char_color.proto  request_check_the_row_body.proto  request_new_game_body.proto  request_row_body.proto  response_check_the_row_body.proto  response_new_game_body.proto  response_row_body.proto  uuid.proto
schemas/: server_game.yaml  types.yaml  wordle_server_game.yaml
src/enums/: server_game.hpp
unittests/: game_server_test.cpp  server_game_test.cpp
